--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,7 @@ p {
   padding: 5px 10px;
   color: white;
   height: 30px;
+  margin-left: 15px;
 }
 .settings {
   grid-area: toggle;
@@ -175,4 +176,46 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width: 1250px) {
+  .wrapper {
+    display: grid;
+    grid-template-columns: 1fr minmax(0px, 768px) 1fr;
+    grid-template-rows: 92px auto 1fr 70px;
+    grid-template-areas:
+      "header header header"
+      ". main ."
+      "footer footer footer";
+  }
+  .header {
+    grid-area: header;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .main-container {
+    grid-area: main;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: repeat(3, minmax(min-content, max-content));
+    grid-template-areas:
+      "title title"
+      "weather details"
+      "daily daily";
+    max-width: 370px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
+    row-gap: 30px;
+    column-gap: 30px;
+  }
+  .condition-detail {
+    /* display: none; */
+  }
+  .details-container {
+    grid-area: details;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
