--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Aleo:wght@400;500;600;700;800;900&family=Cormorant+SC:wght@400;600&family=Gloock&display=swap");
 p {
   margin: 0;
 }
 #root {
   margin: 0;
+  font-family: "Aleo", serif;
 }
 
 /* .logo {
@@ -55,10 +57,13 @@ p {
   grid-template-columns: 1fr 360px 1fr;
   grid-template-areas: "logo search toggle";
   align-items: center;
+  font-family: "Gloock", serif;
 }
 .logo {
   grid-area: logo;
   padding-left: 35px;
+  font-size: 32px;
+  justify-self: center;
 }
 .search {
   grid-area: search;
@@ -73,18 +78,20 @@ p {
   color: white;
   height: 30px;
   margin-left: 15px;
+  font-size: 16px;
 }
 .settings {
   grid-area: toggle;
   justify-self: end;
   padding-right: 35px;
+  justify-self: center;
 }
 .toggle {
   font-weight: 700;
   margin-left: 8px;
   transition: all 0.3s;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 18px;
   padding: 4px 16px;
   height: 40px;
   border-radius: 20px;
@@ -108,6 +115,7 @@ p {
 }
 .title {
   grid-area: title;
+  font-size: 42px;
 }
 .current-data {
   grid-area: weather;
@@ -115,6 +123,8 @@ p {
   flex-direction: column;
   gap: 10px;
   margin: 0;
+  font-size: 24px;
+  font-weight: 600;
 }
 .current-data p {
   margin: 0;
@@ -123,14 +133,18 @@ p {
   grid-area: details;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  font-size: 18px;
+  font-weight: 600;
 }
 .condition-detail {
   text-align: center;
+  font-size: 20px;
 }
 .daily-container {
   grid-area: daily;
   width: 530px;
   max-width: 530px;
+  justify-self: center;
 }
 .daily {
   border-bottom: 1px solid grey;
@@ -139,6 +153,7 @@ p {
   align-items: center;
   gap: 20px;
   width: 100%;
+  font-size: 20px;
 }
 .days {
   display: flex;
